#2 user Files instead of FileUtils.